Removed unused MD5 classes and did some general logic and redundancy cleanup